fix: Bug fixes